fix logic in discoveryhelper and some refactoring